@@ -1,11 +1,16 @@
 
+2015-08-25  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y: tightened AT clause definition.
+	* typeck.c (valid_screen_pos): improved error message and refactored.
+
 2015-08-23  Edward Hart <edward.dan.hart@gmail.com>
 
-	*  parser.y: improved error messages of integer and report_integer.
+	* parser.y: improved error messages of integer and report_integer.
 
 2015-08-21  Edward Hart <edward.dan.hart@gmail.com>
 
-	*  parser.y: removed PENDING from LOWLIGHT clause.
+	* parser.y: removed PENDING from LOWLIGHT clause.
 
 2015-08-20  Edward Hart <edward.dan.hart@gmail.com>
 
